--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.14.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.3"
   },
   "devDependencies": {
