--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^6.2.3"
+    "mongoose": "^6.2.3",
+    "passport-js": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
