--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "homepage": "/AllArticles",
   "name": "justiceit",
+  "main": "src/index.tsx",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -43,6 +44,12 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.5.1"
+    "@types/js-cookie": "^3.0.1",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "prettier": "2.5.1",
+    "typescript": "^4.6.2",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
