--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-
     "target": "es5",
     "lib": [
       "dom",
@@ -14,7 +13,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
