--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.2.3",
-    "passport-js": "^1.0.0"
+    "passport-js": "^1.0.0",
+    "react-loader-spinner": "^6.0.0-0"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
