--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-redux": "^7.1.23",
     "axios": "^0.26.0",
     "draft-js": "^0.11.7",
     "js-cookie": "^3.0.1",
